--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
+    "@types/node": "^18.13.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/styled-components": "^5.1.26",
@@ -27,6 +28,7 @@
     "eslint-plugin-react": "^7.32.2",
     "prettier": "^2.8.4",
     "typescript": "^4.9.3",
-    "vite": "^4.1.0"
+    "vite": "^4.1.0",
+    "vite-plugin-environment": "^1.1.3"
   }
 }
