--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "prettier --write . && eslint . --ext .ts,.tsx,.js,.jsx --fix"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.2",
